refractor tests and class